# scriptengine-tasks-ecearth

./: .coveralls.yml  .gitignore  .readthedocs.yml  .travis.yml  CHANGES.txt  README.md  conda_environment.yml  dev_requirements.txt  pyproject.toml  requirements.txt  setup.py  test_environment.yml
.github/workflows/: build-package.yml  download-test-data.yml  install-from-pypi.yml  install-from-source.yml  publish-to-pypi.yml  pytest.yml  test-action.yml
docs/sphinx/: conf.py  index.rst
docs/sphinx/source/: conf.py  index.rst
docs/templates/: gitlab.txt.j2  markdown.md.j2  markdown_template.md.j2  monitoring.md.j2  redmine.txt.j2  redmine_template.txt.j2
ece-4-monitoring/: exceptions.py
helpers/: TEST-simulated-years.nc  TEST-simulated-years.yml  converters.py  cube_plot.py  cubes.py  dates.py  decorators.py  exceptions.py  file_handling.py  files.py  grib_cf_additions.py  map_type_handling.py  monitoring_dict.py  nemo.py  presentation_objects.py
monitoring/: diskusage_rte_scalar.py  gitlab.py  linear_combination.py  map.py  markdown.py  nemo_all_mean_map.py  nemo_global_mean_year_mean_timeseries.py  nemo_global_sum_year_mean_timeseries.py  nemo_time_mean_temporalmap.py  nemo_timeseries.py  oifs_all_mean_map.py  oifs_global_mean_year_mean_timeseries.py  oifs_timeseries.py  oifs_year_mean_temporalmap.py  redmine.py  scalar.py  si3_hemis_point_month_mean_all_mean_map.py  si3_hemis_point_month_mean_temporalmap.py  si3_hemis_sum_month_mean_timeseries.py  simulatedyears_rte_scalar.py  temporalmap.py  timeseries.py
requirements/: conda-requirements.txt  pip-requirements.txt  test-environment.yaml
scriptengine/tasks/ecearth/: __init__.py  slurm.py
scriptengine/tasks/monitoring/: __init__.py  disk_usage.py  global_average.py  ice_volume.py  markdown_output.py  simulated_legs.py  simulated_years.py  sst_average.py  write_scalar.py
scriptengine/tasks/processing/: foo.py  (+3 more)
templates/: monitoring.md.j2
tests/: test-environment.yml  test_atmosphere_dynamic_map.py  test_atmosphere_map.py  test_atmosphere_static_map.py  test_atmosphere_time_map.py  test_atmosphere_time_series.py  test_cube_plot.py  test_cubes.py  test_dates.py  test_disk_usage.py  test_diskusage_rte_scalar.py  test_dynamic_map.py  test_file_handling.py  test_gitlab.py  test_global_average.py  test_grib_cf_additions.py  test_ice_dynamic_map.py  test_ice_map.py  test_ice_time_map.py  test_ice_time_series.py  test_linear_combination.py  test_map.py  test_map_type_handling.py  test_markdown.py  test_markdown_output.py  test_nemo_all_mean_map.py  test_nemo_global_mean_year_mean_timeseries.py  test_nemo_global_sum_year_mean_timeseries.py  test_nemo_time_mean_temporalmap.py  test_nemo_timeseries.py  test_ocean_dynamic_map.py  test_ocean_map.py  test_ocean_static_map.py  test_ocean_time_map.py  test_oifs_all_mean_map.py  test_oifs_global_mean_year_mean_timeseries.py  test_oifs_timeseries.py  test_oifs_year_mean_temporalmap.py  test_presentation_objects.py  test_redmine.py  (+13 more)
tests/testdata/: NEMO_output_sivolu-03.nc  NEMO_output_sivolu-09.nc  NEMO_output_sivolu-199003.nc  NEMO_output_sivolu-199009.nc  NEMO_output_sivolu-199103.nc  NEMO_output_tos_example.nc  domain_cfg_example.nc  sithic-north-mar.nc  tas-climatology.nc  tos-annual-map.nc  tos-climatology.nc  tos-global-avg.nc  tos_nemo_all_mean_map.nc  tos_nemo_global_mean_year_mean_timeseries.nc  tos_nemo_year_mean_temporalmap.nc
(+84 files in other folders)
